# teladduser

./: .gitignore  README.md  pyproject.toml
src/teladduser/: teladduser.py
tests/: test_teladduser.py
