[tool.poetry]
name = "teladduser"
version = "0.1.0"
description = "The aim of this app is to add new users from a spreadsheet at a Telegram group."
authors = ["Vicente Marçal <vicente.marcal@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
Telethon = "^1.16.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
